Application View DataTables A11Y Update
-- Alerts screen readers of expanded / collapsed responsive rows
-- Alerts screen readers of unhidden responsive row content

--- a/application_view.html
+++ b/application_view.html
@@ -446,17 +446,19 @@
                                                         <table id="responseamendtable" class="table Datatable row-border display responsive" style="width:100%" role="grid" aria-describedby="petition">
                                                             <thead>
                                                                 <tr role="row">
+                                                                	<th scope="col" tabindex="0" aria-controls="responseamendtable" rowspan="1" colspan="1" role="columnheader"></th><!--control-->
                                                                     <th class="sorting_asc desktop tablet fablet phone" tabindex="0" aria-controls="responseamendtable" rowspan="1" colspan="1">
                                                                         <input class="form-check-input checkmark" type="checkbox" value="rowone" tabindex="0" aria-labelledby="checkboxall" id="selectall">
                                                                         <label class="form-check-label form-check" for="selectall" aria-label="select all" id="checkboxall"><span class="radio notspecial"></span></label>
                                                                     </th>
                                                                     <th scope="col" class="sorting_asc desktop tablet fablet phone" tabindex="0" aria-controls="responseamendtable" rowspan="1" colspan="1" role="columnheader" data-priority="2"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Create/Mail Date</th>
-                                                                    <th scope="col" class="sorting_asc desktop tablet fablet phone" tabindex="0" aria-controls="responseamendtable" rowspan="1" colspan="1" role="columnheader" data-priority="1"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Document Description</th>
+                                                                    <th scope="col" class="sorting_asc desktop tablet fablet phone" tabindex="0" aria-controls="responseamendtable" rowspan="1" colspan="1" role="columnheader" data-priority="1"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>   Description</th>
                                                                     <th scope="col" class="sorting_asc tablet fablet phone" tabindex="0" aria-controls="responseamendtable" rowspan="1" colspan="1" role="columnheader" data-priority="3"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> Document Type</th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
                                                               <tr>
+                                                              	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                 <td>
                                                                     <input class="form-check-input checkmark" type="checkbox" value="rowone" tabindex="0" aria-labelledby="checkboxone" id="">
                                                                     <label class="form-check-label form-check" for="" aria-label="select this row" id="checkboxone"><span class="radio notspecial"></span></label>
@@ -467,6 +469,7 @@
                                                                 <td tabindex="0"><span class="uppercase">multi</span></td>
                                                               </tr>
                                                               <tr>
+                                                              	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                 <td>
                                                                     <input class="form-check-input checkmark" type="checkbox" value="rowone" tabindex="0" aria-labelledby="checkboxone" id="">
                                                                     <label class="form-check-label form-check" for="" aria-label="select this row" id="checkboxone"><span class="radio notspecial"></span></label>
@@ -477,6 +480,7 @@
                                                                 <td tabindex="0"><span class="uppercase">xml</span></td>
                                                               </tr>
                                                               <tr>
+                                                              	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                 <td>
                                                                     <input class="form-check-input checkmark" type="checkbox" value="rowone" tabindex="0" aria-labelledby="checkboxone" id="">
                                                                     <label class="form-check-label form-check" for="" aria-label="select this row" id="checkboxone"><span class="radio notspecial"></span></label>
@@ -487,6 +491,7 @@
                                                                 <td tabindex="0"><span class="uppercase">xml</span></td>
                                                               </tr>
                                                               <tr>
+                                                              	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                 <td>
                                                                     <input class="form-check-input checkmark" type="checkbox" value="rowone" tabindex="0" aria-labelledby="checkboxone" id="">
                                                                     <label class="form-check-label form-check" for="" aria-label="select this row" id="checkboxone"><span class="radio notspecial"></span></label>
@@ -497,6 +502,7 @@
                                                                 <td tabindex="0"><span class="uppercase">jpeg</span></td>
                                                               </tr>
                                                               <tr>
+                                                              	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                 <td>
                                                                     <input class="form-check-input checkmark" type="checkbox" value="rowone" tabindex="0" aria-labelledby="checkboxone" id="">
                                                                     <label class="form-check-label form-check" for="" aria-label="select this row" id="checkboxone"><span class="radio notspecial"></span></label>
@@ -520,6 +526,7 @@
                                                         <table id="responseamendtabletwo" class="table Datatable row-border display responsive" style="width:100%" role="grid" aria-describedby="petition">
                                                             <thead>
                                                                 <tr role="row">
+                                                                	<th scope="col" tabindex="0" aria-controls="responseamendtable" rowspan="1" colspan="1" role="columnheader"></th><!--control-->
                                                                     <th class="sorting_asc desktop tablet fablet phone" tabindex="0" aria-controls="responseamendtabletwo" rowspan="1" colspan="1">
                                                                         <input class="form-check-input checkmark" type="checkbox" value="rowone" tabindex="0" aria-labelledby="checkboxalltwo" id="selectalltwo">
                                                                         <label class="form-check-label form-check" for="selectalltwo" aria-label="select all" id="checkboxalltwo"><span class="radio notspecial"></span></label>
@@ -538,6 +545,7 @@
                                                             </thead>
                                                             <tbody>
                                                               <tr>
+                                                              	<td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
                                                                 <td>
                                                                     <input class="form-check-input checkmark" type="checkbox" value="rowone" tabindex="0" aria-labelledby="checkboxone" id="">
                                                                     <label class="form-check-label form-check" for="" aria-label="select this row" id="checkboxone"><span class="radio notspecial"></span></label>
