File Upload Icon CSS + COntact Widget A11Y
-- Removed role=“image” from contacts widget for A11y
-- Improved vertical alignment of File Upload Component at small screen widths

--- a/goods_and_services_video_M1.html
+++ b/goods_and_services_video_M1.html
@@ -220,7 +220,7 @@
                                   <label for="searchmanual" class="radio-inline radiocontainer">Search ID manual for goods and service<input type="radio" name="selectgs" id="searchmanual" value="searchman" tabindex="0"><span class="checkmark"></span></label>
                                 </div>
                                 <div class="radio">
-                                  <label for="provideown" class="radio-inline radiocontainer disabled special">Provide own goods and services<input type="radio" name="selectgs" id="provideown" value="provide" tabindex="0" disabled><span class="checkmark"></span></label>
+                                  <label for="provideown" class="radio-inline radiocontainer disabled special strike">Provide own goods and services<input type="radio" name="selectgs" id="provideown" value="provide" tabindex="0" disabled><span class="checkmark"></span></label>
                                 </div>
                             </div><!--END radiogroup-->
 						</div>
