--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -415,47 +415,47 @@
                                                 </thead>
                                                 <tbody class="scroll">
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Avo Reed</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Avo Reed</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">avo.reid@us.gt.com</td>
                                                     </tr>
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Jackie Babos</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Jackie Babos</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">jackie.babos@us.gt.com</td>
                                                     </tr>
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Jacob Goldstein</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Jacob Goldstein</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
                                                     </tr>
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Avo Reed</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Avo Reed</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">avo.reid@us.gt.com</td>
                                                     </tr>
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Jackie Babos</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Jackie Babos</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">jackie.babos@us.gt.com</td>
                                                     </tr>
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Jacob Goldstein</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Jacob Goldstein</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
                                                     </tr>
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Jacob Goldstein</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Jacob Goldstein</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
                                                     </tr>
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Avo Reed</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Avo Reed</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">avo.reid@us.gt.com</td>
                                                     </tr>
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Jackie Babos</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Jackie Babos</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">jackie.babos@us.gt.com</td>
                                                     </tr>
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Jacob Goldstein</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Jacob Goldstein</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
                                                     </tr>
                                                     <tr role="row">
-                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" role="img" aria-label="select this contact"></span></a> Li Zhang</td>
+                                                        <td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-label="select this contact"></span></a> Li Zhang</td>
                                                         <td tabindex="0" class="list-group-item col-xs-6">li.zhang@us.gt.com</td>
                                                     </tr>
                                                	</tbody>
