--- a/owner_info_review_ROA_optional.html
+++ b/owner_info_review_ROA_optional.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+	<div id="skipnav"><a href="#mainContent">Skip navigation</a></div>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -134,7 +135,7 @@
 </nav>
 <div class="container-fluid">    
   	<div class="row content">
-        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
+        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="mainContent" tabindex="-1">
           <!--START Content Div-->
             <div class="row" id="editowneroptional">
                 <div class="col-xs-12">
