--- a/additional_information.html
+++ b/additional_information.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/lynnstyles.css">
 </head>
 <body>
+	<div id="skipnav"><a href="#mainContent">Skip navigation</a></div>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -132,7 +133,7 @@
     </nav>
 	<div class="container-fluid">    
       <div class="row content">
-        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
+        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="mainContent" tabindex="-1">
           <!--START Content Div-->
             <div class="row" id="detected">
                 <div class="col-xs-12">
