--- a/application_view.html
+++ b/application_view.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/lynnstyles.css">
    </head>
 <body>
+	<div id="skipnav"><a href="#mainContent">Skip navigation</a></div>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -133,7 +134,7 @@
     </nav>
     <div class="container-fluid">    
       <div class="row content" id="responseamendreview">
-        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
+        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="mainContent" tabindex="-1">
       		<div class="row">
                 <div class="col-xs-12" id="dashsectionscontainer">
                     <!--START Content Div-->
