--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/lynnstyles.css">
 </head>
 <body>
+	<div id="skipnav"><a href="#mainContent">Skip navigation</a></div>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -134,7 +135,7 @@
       
     <div class="container-fluid">    
       <div class="row content" id="attorney">
-        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
+        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="mainContent" tabindex="-1">
             <!--START Content Div-->
             <div class="row">
                 <div class="col-xs-12">
