--- a/file_petition_table.html
+++ b/file_petition_table.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+	<div id="skipnav"><a href="#petitions">Skip navigation</a></div>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -134,7 +135,7 @@
     </nav>
     <div class="container-fluid">    
       <div class="row content">
-        <main class="col-xs-12 col-sm-11 col-md-8 col-lg-7" id="petitions">
+        <main class="col-xs-12 col-sm-11 col-md-8 col-lg-7" id="petitions" tabindex="-1">
             <!--START Content Div-->
             <div class="row">
                 <div class="col-xs-12 text-left">
