Revert "Skip Navigation (Section 508)"
This reverts commit 5ecdc3f954ad523505d9c43a0c6c09142fc5d523.

--- a/post_reg_optional.html
+++ b/post_reg_optional.html
@@ -27,7 +27,6 @@
    </head>
 
 <body>
-	<div id="skipnav"><a href="#postregoptact">Skip navigation</a></div>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -135,7 +134,7 @@
     </nav>
     <div class="container-fluid">    
       <div class="row content">
-        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="postregoptact" tabindex="-1">
+        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="postregoptact">
             <!--START Content Div-->
             <div class="row">
                 <div class="col-xs-12">
