--- a/goods_and_services_table_M5.html
+++ b/goods_and_services_table_M5.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>Goods and Services Table :: USPTO.gov :: webapp prototype</title>
+    <title>USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -27,7 +27,6 @@
 </head>
 
 <body>
-	<div id="skipnav"><a href="#mainContent">Skip navigation</a></div>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -135,7 +134,7 @@
     </nav>
     <div class="container-fluid">    
       <div class="row content">
-        <main class="col-xs-12 col-sm-11 col-md-8 col-lg-7" id="mainContent" tabindex="-1">
+        <main class="col-xs-12 col-sm-11 col-md-8 col-lg-7">
             <!--START Content Div-->
             <div class="row">
                 <div class="col-xs-12 text-left">
