--- a/login_loginmodal.html
+++ b/login_loginmodal.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO Trademark Application Login :: USPTO.gov :: webapp prototype</title>
+    <title>USPTO.gov :: webapp prototype :: USPTO Trademark Application Login</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -26,7 +26,6 @@
 </head>
 
 <body class="loginform">
-	<div id="skipnav"><a href="#loginform">Skip navigation</a></div>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -134,7 +133,7 @@
     </nav>
     <div class="container-fluid">    
         <div class="row content">
-            <main class="col-xs-12 col-sm-6 col-md-6 col-lg-4" id="loginform" tabindex="-1">
+            <main class="col-xs-12 col-sm-6 col-md-6 col-lg-4" id="loginform">
             <!--START Content Div-->
             	<div>
                     <form action="" method="post" >
