--- a/post_reg_incontestable.html
+++ b/post_reg_incontestable.html
@@ -27,7 +27,6 @@
 </head>
 
 <body>
-	<div id="skipnav"><a href="#mainContent">Skip navigation</a></div>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -135,7 +134,7 @@
     </nav>
 <div class="container-fluid">    
   	<div class="row content">
-        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="mainContent" tabindex="-1">
+        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
           <!--START Content Div-->
             <div class="row" id="incontestable"><!--postregsection8-->
                 <div class="col-xs-12">
