--- a/user_profile.html
+++ b/user_profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
-    <title>User Profile :: USPTO.gov :: webapp prototype</title>
+    <title>USPTO.gov :: webapp prototype :: User Profile</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="css/lynnstyles.css">
 </head>
 <body>
-	<div id="skipnav"><a href="#userprofilepage">Skip navigation</a></div>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -130,7 +129,7 @@
     </nav>
     <div class="container-fluid">    
       <div class="row content">
-        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="userprofilepage" tabindex="-1">
+        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="userprofilepage">
             <!--START Content Div-->
             <div class="row">
                 <div class="col-xs-12 text-left">
