Skip Navigation (Section 508)
-- Solution for redundant screen reader readout of main navigation
-- Removed erroneous Lower Nav from Landing Page
-- Improved browser display of <title> tag for remainder of pages

--- a/password_recovery.html
+++ b/password_recovery.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/lynnstyles.css">
 </head>
 <body>
+	<div id="skipnav"><a href="#mainContent">Skip navigation</a></div>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -129,12 +130,12 @@
     </nav>
     <div class="container-fluid" id="newpsword">    
       <div class="row content">
-        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
+        <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="mainContent" tabindex="-1">
             <!--START Content Div-->
             <div class="row">
                 <div class="col-xs-12">
                     <h1>Enter and Confirm New Password</h1>
-                    <!--<p class="required">Having trouble? <a href="#" target="_blank">Contact<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a> us.</p>-->
+                    <p class="required">Having trouble? <a href="#" target="_blank">Contact<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a> us.</p>
                     <p class="required"><span class="weight600">&#42; = Required</span></p>
                     <form method="post" action="" aria-labelledby="passwordetails">
                         <fieldset class="form-group form-group-md" aria-label="enter and confirm new password" id="newpsw">
